--- a/index.html
+++ b/index.html
@@ -1,59 +1,119 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Slide Guys Booking</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" />
   <style>
     body {
-      background-color: #f4f4f4;
+      background-color: #f8f9fa;
       font-family: Arial, sans-serif;
     }
+
     .booking-form {
       max-width: 500px;
       margin: 50px auto;
-      padding: 30px;
       background: white;
+      padding: 30px;
       border-radius: 10px;
+      box-shadow: 0 4px 20px rgba(0,0,0,0.1);
     }
-    #unitDisplay {
-      cursor: pointer;
+
+    .form-control {
+      background-color: #e9f0ff;
     }
+
+    .btn-primary {
+      background-color: #006aff;
+      border: none;
+    }
+
+    .btn-primary:hover {
+      background-color: #0051c9;
+    }
+
+    .logo {
+      max-height: 80px;
+      margin-bottom: 20px;
+      border-radius: 12px;
+    }
+
+    .unit-dropdown {
+      position: relative;
+      text-align: left;
+      margin-bottom: 1rem;
+    }
+
     .unit-option {
+      display: flex;
+      align-items: center;
+      padding: 10px;
       cursor: pointer;
-      padding: 5px;
     }
-    .unit-option:hover {
-      background-color: #f0f0f0;
+
+    .unit-option img {
+      height: 40px;
+      width: 40px;
+      border-radius: 8px;
+      margin-right: 10px;
+    }
+
+    .unit-list {
+      position: absolute;
+      width: 100%;
+      background: white;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      max-height: 200px;
+      overflow-y: auto;
+      z-index: 10;
+      display: none;
+    }
+
+    .unit-dropdown.open .unit-list {
+      display: block;
+    }
+
+    #unitDisplay {
+      background-color: #e9f0ff;
+      padding: 10px;
+      border-radius: 8px;
+      cursor: pointer;
     }
   </style>
 </head>
 <body>
   <div class="booking-form text-center">
-    <img src="https://i.ibb.co/xFRXbq0/Slide-Guys-Logo.png" alt="Slide Guys Logo" class="img-fluid mb-3" />
-    <h2 class="mb-4">Reserve Your Unit</h2>
+    <img src="https://lh3.googleusercontent.com/a-/ALV-UjUTAoSFAR5OUMj0ZCkgLF1RMYoE-Q85G0HPftaFEBBIjjzw9cQ=s265-w265-h265" alt="Slide Guys Logo" class="logo">
+    <h2 class="mb-3">Slide Guys Booking</h2>
+    <p>Select a unit and the date you would like to reserve.<br> No cancellations.<br>Rescheduling is subject to availability.<br>A $50 deposit per unit is due at time of reservation. A team member will contact you shortly after reservation confirmation. We accept cash, check, venmo, cash app, and pay-pal.</p>
+    
     <form id="bookingForm">
       <input type="text" id="name" class="form-control mb-2" placeholder="Full Name" required />
       <input type="tel" id="phone" class="form-control mb-2" placeholder="Phone Number" required />
       <input type="email" id="email" class="form-control mb-2" placeholder="Email Address" required />
       <input type="text" id="address" class="form-control mb-2" placeholder="Address" required />
 
-      <div class="dropdown mb-2">
-        <button class="btn btn-outline-secondary dropdown-toggle w-100" type="button" id="unitDropdown" data-bs-toggle="dropdown" aria-expanded="false">
-          <span id="unitDisplay">Select a unit</span>
-        </button>
-        <ul class="dropdown-menu w-100" aria-labelledby="unitDropdown" id="unitList"></ul>
-        <input type="hidden" id="unit" required />
+      <div class="unit-dropdown" id="unitDropdown">
+        <div id="unitDisplay">Select a unit</div>
+        <div class="unit-list" id="unitList"></div>
       </div>
+      <input type="hidden" id="unit" required />
 
-      <input type="date" id="date" class="form-control mb-2" required />
+      <input type="date" id="date" class="form-control mb-3" required />
+
       <button type="button" id="addToCartBtn" class="btn btn-secondary w-100 mb-2">Add to Cart</button>
+
       <button type="submit" class="btn btn-primary w-100">Reserve</button>
     </form>
 
-    <div id="successMessage" class="mt-3 text-success" style="display:none;">Booking successful!</div>
-    <div id="errorMessage" class="mt-3 text-danger" style="display:none;">That unit is already booked on this date.</div>
+    <div id="successMessage" class="mt-3 text-success" style="display:none;">
+      Booking successful!
+    </div>
+    <div id="errorMessage" class="mt-3 text-danger" style="display:none;">
+      That unit is already booked on this date.
+    </div>
 
     <div class="mt-4 text-start" id="cartSection" style="display: none;">
       <h5>Cart</h5>
@@ -68,37 +128,71 @@
       emailjs.init("PXm_wNk9aIao8Hlpp");
     })();
   </script>
+
   <script>
     document.addEventListener('DOMContentLoaded', async () => {
-      const today = new Date().toISOString().split('T')[0];
-      document.getElementById('date').setAttribute('min', today);
+      const today = new Date();
+      const currentYear = today.getFullYear();
+      const allowedStart = new Date(`${currentYear}-01-01`);
+      const allowedEnd = new Date(`${currentYear}-12-31`);
+      const dateInput = document.getElementById('date');
 
-      const supabase = createClient(
-        'https://vaobmohukgcqfvnclqyh.supabase.co',
-        'your-public-anon-key-here'
-      );
+      const minDate = today > allowedStart ? today : allowedStart;
+      dateInput.setAttribute('min', minDate.toISOString().split('T')[0]);
+      dateInput.setAttribute('max', allowedEnd.toISOString().split('T')[0]);
+
+      dateInput.addEventListener('change', () => {
+        const selected = new Date(dateInput.value);
+        if (selected.getFullYear() !== currentYear) {
+          alert("You may only book dates within this year. Bookings for next year open January 1st.");
+          dateInput.value = '';
+        }
+      });
+
+      const supabaseUrl = 'https://vaobmohukgcqfvnclqyh.supabase.co';
+      const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InZhb2Jtb2h1a2djcWZ2bmNscXloIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDQ3NTcyNzksImV4cCI6MjA2MDMzMzI3OX0.6pl5QBTVUr8wu3bn4kXhI2kPE5qf97PrIbUw7-0382M';
+      const supabase = window.supabase.createClient(supabaseUrl, supabaseKey);
 
       async function loadUnits() {
-        const { data, error } = await supabase.from('units').select('*');
-        if (error) return console.error(error);
+        const { data, error } = await supabase.from('units').select('id, name, thumbnail_url');
+        if (error) {
+          console.error('Error loading units:', error);
+          return;
+        }
 
         const unitList = document.getElementById('unitList');
+        const unitDisplay = document.getElementById('unitDisplay');
+        const unitHidden = document.getElementById('unit');
+
         data.forEach(unit => {
-          const li = document.createElement('li');
-          li.className = 'dropdown-item unit-option';
-          li.textContent = unit.name;
-          li.onclick = () => {
-            document.getElementById('unitDisplay').textContent = unit.name;
-            document.getElementById('unit').value = unit.name;
-          };
-          unitList.appendChild(li);
+          const div = document.createElement('div');
+          div.className = 'unit-option';
+          div.innerHTML = `
+            <img src="${unit.thumbnail_url}" alt="${unit.name}" />
+            <span>${unit.name}</span>
+          `;
+          div.addEventListener('click', () => {
+            unitDisplay.textContent = unit.name;
+            unitHidden.value = unit.name;
+            document.getElementById('unitDropdown').classList.remove('open');
+          });
+          unitList.appendChild(div);
+        });
+
+        unitDisplay.addEventListener('click', () => {
+          document.getElementById('unitDropdown').classList.toggle('open');
+        });
+
+        document.addEventListener('click', (e) => {
+          if (!document.getElementById('unitDropdown').contains(e.target)) {
+            document.getElementById('unitDropdown').classList.remove('open');
+          }
         });
       }
 
       await loadUnits();
 
       const cart = [];
-
       document.getElementById('addToCartBtn').addEventListener('click', () => {
         const unitName = document.getElementById('unit').value;
         const date = document.getElementById('date').value;
@@ -110,19 +204,33 @@
 
         const isDuplicate = cart.some(item => item.unitName === unitName && item.date === date);
         if (isDuplicate) {
-          alert('This unit and date is already in your cart.');
+          alert('This unit and date combination is already in your cart.');
           return;
         }
 
-        cart.push({ unitName, date });
+        const cartItem = { unitName, date };
+        cart.push(cartItem);
 
         const cartSection = document.getElementById('cartSection');
         const cartList = document.getElementById('cartList');
         cartSection.style.display = 'block';
 
         const li = document.createElement('li');
-        li.className = 'list-group-item';
-        li.textContent = `${unitName} — ${date}`;
+        li.className = 'list-group-item d-flex justify-content-between align-items-center';
+        li.innerHTML = `
+          ${unitName} — ${date}
+          <button class="btn btn-sm btn-danger">x</button>
+        `;
+
+        li.querySelector('button').addEventListener('click', () => {
+          const index = cart.findIndex(item => item.unitName === unitName && item.date === date);
+          if (index !== -1) cart.splice(index, 1);
+          li.remove();
+          if (cart.length === 0) {
+            cartSection.style.display = 'none';
+          }
+        });
+
         cartList.appendChild(li);
       });
 
@@ -133,76 +241,55 @@
         const phone = document.getElementById('phone').value.trim();
         const email = document.getElementById('email').value.trim();
         const address = document.getElementById('address').value.trim();
+        const unitName = document.getElementById('unit').value;
+        const date = document.getElementById('date').value;
 
-        if (cart.length === 0) {
-          alert('Please add at least one unit to the cart.');
+        const { data: unitData, error: unitError } = await supabase
+          .from('units')
+          .select('id')
+          .eq('name', unitName)
+          .single();
+
+        if (unitError || !unitData) {
+          alert('Error finding unit ID for "' + unitName + '"');
           return;
         }
 
-        const bookings = [];
+        const unitId = unitData.id;
 
-        for (const item of cart) {
-          const { data: unitData, error: unitError } = await supabase
-            .from('units')
-            .select('id')
-            .eq('name', item.unitName)
-            .single();
+        const { data: existing, error: checkError } = await supabase
+          .from('bookings')
+          .select('*')
+          .eq('unit', unitId)
+          .eq('date', date);
 
-          if (unitError || !unitData) {
-            alert(`Error finding unit: ${item.unitName}`);
-            return;
-          }
-
-          const unitId = unitData.id;
-
-          const { data: existing } = await supabase
-            .from('bookings')
-            .select('*')
-            .eq('unit', unitId)
-            .eq('date', item.date);
-
-          if (existing && existing.length > 0) {
-            document.getElementById('errorMessage').style.display = 'block';
-            document.getElementById('successMessage').style.display = 'none';
-            alert(`The unit "${item.unitName}" is already booked on ${item.date}.`);
-            return;
-          }
-
-          bookings.push({
-            name,
-            phone,
-            email,
-            address,
-            unit: unitId,
-            date: item.date
-          });
-
-          const emailParams = {
-            name,
-            phone,
-            email,
-            address,
-            unit: item.unitName,
-            date: item.date
-          };
-
-          emailjs.send("service_1zxrd0j", "template_nqep0gt", emailParams);
-          emailjs.send("service_1zxrd0j", "template_6z2dcsj", emailParams);
+        if (existing && existing.length > 0) {
+          document.getElementById('errorMessage').style.display = 'block';
+          document.getElementById('successMessage').style.display = 'none';
+          return;
         }
 
-        const { error: insertError } = await supabase.from('bookings').insert(bookings);
+        const { error: insertError } = await supabase.from('bookings').insert([
+          { name, phone, email, address, unit: unitId, date }
+        ]);
+
         if (insertError) {
-          alert('Error submitting bookings.');
-          return;
-        }
+          const isDuplicate = insertError.message.includes('unique_unit_per_day');
+          const message = isDuplicate
+            ? 'We apologize this unit has been reserved already.'
+            : 'An error occurred while booking. Please try again.';
+          alert(message);
+        } else {
+          const params = { name, phone, email, address, unit: unitName, date };
 
-        document.getElementById('successMessage').style.display = 'block';
-        document.getElementById('errorMessage').style.display = 'none';
-        document.getElementById('bookingForm').reset();
-        document.getElementById('unitDisplay').textContent = 'Select a unit';
-        document.getElementById('cartList').innerHTML = '';
-        document.getElementById('cartSection').style.display = 'none';
-        cart.length = 0;
+          emailjs.send("service_1zxrd0j", "template_nqep0gt", params);
+          emailjs.send("service_1zxrd0j", "template_6z2dcsj", params);
+
+          document.getElementById('successMessage').style.display = 'block';
+          document.getElementById('errorMessage').style.display = 'none';
+          document.getElementById('bookingForm').reset();
+          document.getElementById('unitDisplay').textContent = 'Select a unit';
+        }
       });
     });
   </script>
