--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -88,7 +88,7 @@
     <img src="https://lh3.googleusercontent.com/a-/ALV-UjUTAoSFAR5OUMj0ZCkgLF1RMYoE-Q85G0HPftaFEBBIjjzw9cQ=s265-w265-h265" alt="Slide Guys Logo" class="logo">
     <h2 class="mb-3">Slide Guys Booking</h2>
     <p>Select a unit and the date you would like to reserve.<br> No cancellations.<br>Rescheduling is subject to availability.<br>A $50 deposit per unit is due at time of reservation. A team member will contact you shortly after reservation confirmation. We accept cash, check, venmo, cash app, and pay-pal.</p>
-    
+
     <form id="bookingForm">
       <input type="text" id="name" class="form-control mb-2" placeholder="Full Name" required />
       <input type="tel" id="phone" class="form-control mb-2" placeholder="Phone Number" required />
@@ -102,6 +102,9 @@
       <input type="hidden" id="unit" required />
 
       <input type="date" id="date" class="form-control mb-3" required />
+
+      <button type="button" id="addToCartBtn" class="btn btn-secondary w-100 mb-2">Add to Cart</button>
+
       <button type="submit" class="btn btn-primary w-100">Reserve</button>
     </form>
 
@@ -111,12 +114,14 @@
     <div id="errorMessage" class="mt-3 text-danger" style="display:none;">
       That unit is already booked on this date.
     </div>
+
+    <div class="mt-4 text-start" id="cartSection" style="display: none;">
+      <h5>Cart</h5>
+      <ul class="list-group" id="cartList"></ul>
+    </div>
   </div>
 
-  <!-- Supabase -->
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-
-  <!-- EmailJS -->
   <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
   <script>
     (function () {
@@ -132,12 +137,10 @@
       const allowedEnd = new Date(`${currentYear}-12-31`);
       const dateInput = document.getElementById('date');
 
-      // Set min date to today or Jan 1st of current year, whichever is later
       const minDate = today > allowedStart ? today : allowedStart;
       dateInput.setAttribute('min', minDate.toISOString().split('T')[0]);
       dateInput.setAttribute('max', allowedEnd.toISOString().split('T')[0]);
 
-      // Prevent next year selection
       dateInput.addEventListener('change', () => {
         const selected = new Date(dateInput.value);
         if (selected.getFullYear() !== currentYear) {
@@ -150,13 +153,9 @@
       const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InZhb2Jtb2h1a2djcWZ2bmNscXloIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDQ3NTcyNzksImV4cCI6MjA2MDMzMzI3OX0.6pl5QBTVUr8wu3bn4kXhI2kPE5qf97PrIbUw7-0382M';
       const supabase = window.supabase.createClient(supabaseUrl, supabaseKey);
 
-      // Load Units into Custom Dropdown
       async function loadUnits() {
         const { data, error } = await supabase.from('units').select('id, name, thumbnail_url');
-        if (error) {
-          console.error('Error loading units:', error);
-          return;
-        }
+        if (error) return;
 
         const unitList = document.getElementById('unitList');
         const unitDisplay = document.getElementById('unitDisplay');
@@ -190,7 +189,40 @@
 
       await loadUnits();
 
-      // Handle Booking Form Submission
+      const cart = [];
+      document.getElementById('addToCartBtn').addEventListener('click', () => {
+        const unitName = document.getElementById('unit').value;
+        const date = document.getElementById('date').value;
+
+        if (!unitName || !date) {
+          alert('Please select a unit and a date before adding to cart.');
+          return;
+        }
+
+        const isDuplicate = cart.some(item => item.unitName === unitName && item.date === date);
+        if (isDuplicate) {
+          alert('This unit and date combination is already in your cart.');
+          return;
+        }
+
+        cart.push({ unitName, date });
+
+        const cartSection = document.getElementById('cartSection');
+        const cartList = document.getElementById('cartList');
+        cartSection.style.display = 'block';
+
+        const li = document.createElement('li');
+        li.className = 'list-group-item d-flex justify-content-between align-items-center';
+        li.innerHTML = `${unitName} — ${date} <button class="btn btn-sm btn-danger">&times;</button>`;
+        li.querySelector('button').addEventListener('click', () => {
+          const index = cart.findIndex(item => item.unitName === unitName && item.date === date);
+          if (index !== -1) cart.splice(index, 1);
+          li.remove();
+          if (cart.length === 0) cartSection.style.display = 'none';
+        });
+        cartList.appendChild(li);
+      });
+
       document.getElementById('bookingForm').addEventListener('submit', async (e) => {
         e.preventDefault();
 
@@ -198,58 +230,65 @@
         const phone = document.getElementById('phone').value.trim();
         const email = document.getElementById('email').value.trim();
         const address = document.getElementById('address').value.trim();
-        const unitName = document.getElementById('unit').value;
-        const date = document.getElementById('date').value;
 
-        // Lookup unit ID by name
-        const { data: unitData, error: unitError } = await supabase
-          .from('units')
-          .select('id')
-          .eq('name', unitName)
-          .single();
-
-        if (unitError || !unitData) {
-          alert('Error finding unit ID for "' + unitName + '"');
+        if (cart.length === 0) {
+          alert('Your cart is empty. Please add at least one booking.');
           return;
         }
 
-        const unitId = unitData.id;
+        let allSuccessful = true;
 
-        // Check for existing booking
-        const { data: existing, error: checkError } = await supabase
-          .from('bookings')
-          .select('*')
-          .eq('unit', unitId)
-          .eq('date', date);
+        for (const item of cart) {
+          const { unitName, date } = item;
 
-        if (existing && existing.length > 0) {
-          document.getElementById('errorMessage').style.display = 'block';
-          document.getElementById('successMessage').style.display = 'none';
-          return;
+          const { data: unitData, error: unitError } = await supabase
+            .from('units')
+            .select('id')
+            .eq('name', unitName)
+            .single();
+
+          if (unitError || !unitData) {
+            allSuccessful = false;
+            continue;
+          }
+
+          const unitId = unitData.id;
+
+          const { data: existing, error: checkError } = await supabase
+            .from('bookings')
+            .select('*')
+            .eq('unit', unitId)
+            .eq('date', date);
+
+          if (existing && existing.length > 0) {
+            allSuccessful = false;
+            continue;
+          }
+
+          const { error: insertError } = await supabase.from('bookings').insert([
+            { name, phone, email, address, unit: unitId, date }
+          ]);
+
+          if (insertError) {
+            allSuccessful = false;
+          } else {
+            const params = { name, phone, email, address, unit: unitName, date };
+            emailjs.send("service_1zxrd0j", "template_nqep0gt", params);
+            emailjs.send("service_1zxrd0j", "template_6z2dcsj", params);
+          }
         }
 
-        // Insert booking
-        const { error: insertError } = await supabase.from('bookings').insert([
-          { name, phone, email, address, unit: unitId, date }
-        ]);
-
-        if (insertError) {
-          const isDuplicate = insertError.message.includes('unique_unit_per_day');
-          const message = isDuplicate
-            ? 'We apologize this unit has been reserved already.'
-            : 'An error occurred while booking. Please try again.';
-          alert(message);
-        } else {
-          // Send confirmation emails
-          const params = { name, phone, email, address, unit: unitName, date };
-
-          emailjs.send("service_1zxrd0j", "template_nqep0gt", params);
-          emailjs.send("service_1zxrd0j", "template_6z2dcsj", params);
-
+        if (allSuccessful) {
           document.getElementById('successMessage').style.display = 'block';
           document.getElementById('errorMessage').style.display = 'none';
           document.getElementById('bookingForm').reset();
           document.getElementById('unitDisplay').textContent = 'Select a unit';
+          cart.length = 0;
+          document.getElementById('cartList').innerHTML = '';
+          document.getElementById('cartSection').style.display = 'none';
+        } else {
+          document.getElementById('successMessage').style.display = 'none';
+          document.getElementById('errorMessage').style.display = 'block';
         }
       });
     });
